# goffy-os

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  ROM_FEASIBILITY.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
android/: gradle.properties  settings.gradle.kts
mcp-servers/: README.md
rom/: README.md
scripts/: __init__.py  android_preflight.py  collect_modeldebug_idle_cleanup_evidence.py  collect_moto_g_validation_bundle.py  create_aosp_product_import.py  create_pairing_qr.py  create_rom0_manual_action_packet.py  create_rom0_operator_checklist.py  create_rom_bootloader_visibility_guide.py  create_rom_dsu_preflight_evidence.py  create_rom_fastboot_evidence.py  create_rom_gsi_candidate_evidence.py  create_rom_manual_gates_template.py  create_rom_planning_checklist.py  create_rom_release_signing_plan.py  create_rom_stock_candidate_report.py  create_rom_stock_restore_evidence.py  create_rom_stock_rollback_draft.py  create_rom_unlock_eligibility_evidence.py  create_tflite_task_text_export_image_audit_evidence.py  create_tflite_task_text_training_package.py  demo_hub.py  demo_mcp.py  guide_moto_g_validation.py  record_moto_g_smoke.py  refresh_rom0_action_packet.py  rom_feasibility_probe.py  run_moto_g_device_smoke.py  run_moto_g_litertlm_benchmark.py  run_moto_g_modeldebug_observation_smoke.py  run_moto_g_tflite_task_text_benchmark.py  run_moto_g_tflite_task_text_eval_suite.py  run_moto_g_usb_setup.py  run_moto_g_validation_pipeline.py  run_tflite_task_text_model_maker_docker.py  security_scan.py  setup_doctor.py  validate_rom_feature_payload.py  validate_rom_manual_gates.py  validate_rom_product_overlay.py  (+17 more)
shared/: README.md
tests/: test_android_preflight.py  test_ci_workflow.py  test_collect_modeldebug_idle_cleanup_evidence.py  test_collect_moto_g_validation_bundle.py  test_create_aosp_product_import.py  test_create_pairing_qr.py  test_create_rom0_manual_action_packet.py  test_create_rom0_operator_checklist.py  test_create_rom_bootloader_visibility_guide.py  test_create_rom_dsu_preflight_evidence.py  test_create_rom_fastboot_evidence.py  test_create_rom_gsi_candidate_evidence.py  test_create_rom_manual_gates_template.py  test_create_rom_planning_checklist.py  test_create_rom_release_signing_plan.py  test_create_rom_stock_candidate_report.py  test_create_rom_stock_restore_evidence.py  test_create_rom_stock_rollback_draft.py  test_create_rom_unlock_eligibility_evidence.py  test_create_tflite_task_text_export_image_audit_evidence.py  test_create_tflite_task_text_training_package.py  test_guide_moto_g_validation.py  test_phone_capabilities.py  test_protocol.py  test_record_moto_g_smoke.py  test_refresh_rom0_action_packet.py  test_rom_feasibility_probe.py  (+30 more)
(+241 files in other folders)
