[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "goffy-os"
version = "0.2.0"
description = "GOFFY OS typed protocol and Mac Hub foundation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "mcp==1.28.1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.34,<1",
  "websockets>=15,<17",
]

[project.optional-dependencies]
clipboard = [
  "pasteboard==0.4.0; sys_platform == 'darwin'",
]
dev = [
  "build>=1.2,<2",
  "httpx2>=2.5,<3",
  "jsonschema>=4.24,<5",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "PyYAML>=6.0,<7",
  "ruff>=0.11,<1",
  "segno>=1.6,<2",
]

[project.scripts]
goffy-hub = "goffy_hub.main:run"

[tool.hatch.build.targets.wheel]
packages = ["hub/src/goffy_hub", "protocol/python/goffy_protocol"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["hub/src", "protocol/python", "hub/tests", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"hub/tests/**" = ["S101", "S104", "S105"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["hub/src", "protocol/python"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["hub/tests", "tests"]
